# rainstr-website

./: .gitignore  README.md  README.txt  feedbacks.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
server/: main.py  pyproject.toml
src/: AboutView.vue  App.vue  ContactView.vue  MainView.vue  MemberView.vue  ProjectView.vue  main.ts  style.css
src/assets/: main.css  universal-card.css
src/client/: AboutView.vue  App.vue  ContactView.vue  MainView.vue  MemberView.vue  ProjectView.vue  main.js  member.json  menuItems.json  project.json  style.css  universal-card.css
src/client/components/: GitHubCard.vue  MenuBar.vue  Title.vue
src/components/: GitHubCard.vue  HelloWorld.vue  MenuBar.vue  Title.vue  TitleBar.vue
src/router/: index.ts
src/server/: main.js
src/views/: About.vue  Contact.vue  Main.vue  Member.vue  MemberView.vue  NotFound.vue  Project.vue
